--- a/style.css
+++ b/style.css
@@ -8,11 +8,28 @@
 html, body {
     height: 100%;
     margin: 0;
+    background: rgb(255, 255, 255);
+
+}
+
+@font-face {
+    font-family: 'MyCustomFont';
+    src: url('./assets/fonts/Calculator.ttf') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+
+h1{
+    text-align: center;
+    margin-top: 25px;
+    color: rgb(0, 0, 0);
 }
 
 .calculator-container{
     display: grid;
     grid-template-areas: 
+      "title title title title"
       "display display display display"
       "btnC btnBackspace btnMultiply btnDivide"
       "btn7 btn8 btn9 btnMinus"
@@ -21,8 +38,123 @@ html, body {
       "btn0 btn0 btnDot buttonEqual"; 
       
     grid-template-columns: 1fr 1fr 1fr 1fr; /* 4 Spalten */
-    grid-template-rows: 60px 60px 60px 60px 60px; /* Zeilen für Display und Tasten */
+    grid-template-rows: 30px 60px 60px 60px 60px 60px; /* Zeilen für Display und Tasten */
     gap: 10px; /* Abstand zwischen den Tasten */
-    width: 220px;
+    width: 275px;
     margin: 50px auto; /* Zentriert den Taschenrechner */
+    border: 3px solid rgb(0, 0, 0);
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgb(92, 92, 92);
 }
+.calculator-button{
+    font-size: 30px;
+    width:100%;
+    height: 100%;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 5px;
+    color: rgb(0, 0, 0);
+}
+
+#calculator-screen {
+    grid-area: display;
+}
+
+#btnC {
+    grid-area: btnC;
+}
+
+#btnBackspace {
+    grid-area: btnBackspace;
+}
+
+#btnMultiply {
+    grid-area: btnMultiply;
+}
+
+#btnDivide {
+    grid-area: btnDivide;
+}
+
+#btn7 {
+    grid-area: btn7;
+}
+
+#btn8 {
+    grid-area: btn8;
+}
+
+#btn9 {
+    grid-area: btn9;
+}
+
+#btnMinus {
+    grid-area: btnMinus;
+}
+
+#btn4 {
+    grid-area: btn4;
+}
+
+#btn5 {
+    grid-area: btn5;
+}
+
+#btn6 {
+    grid-area: btn6;
+}
+
+#btnPlus {
+    grid-area: btnPlus;
+}
+
+#btn1 {
+    grid-area: btn1;
+}
+
+#btn2 {
+    grid-area: btn2;
+}
+
+#btn3 {
+    grid-area: btn3;
+}
+
+#buttonEqual {
+    grid-area: buttonEqual;
+    grid-row: span 2; /* Spannt über 2 Zeilen */
+}
+
+#btn0 {
+    grid-area: btn0;
+    grid-column: span 2; /* Spannt über 2 Spalten */
+}
+
+#btnDot {
+    grid-area: btnDot;
+}
+#calculator-screen input{
+    font-family: 'MyCustomFont', sans-serif;
+    width: 100%;
+    height: 100%;
+    font-size: 3em;
+    text-align: right;
+    padding: 10px;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 5px;
+}
+
+#title{
+    font-size: 10px;
+    grid-area: title;
+    font-size: 2em;
+    color: rgb(255, 255, 255);
+    
+}
+#title img{
+    width: 175px;
+    height: auto;  
+   
+}
+
+  
